feat(api): create + track request
